# MLOps_2025

./: .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  inference.py  knn.joblib  main.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
2/lab/: notebook_01_psycopg (1).ipynb  notebook_02_duckdb.ipynb  pyproject.toml
config/: .env.dev  .env.prod  .env.test
tests/: test_app.py  test_settings.py
