[project]
name = "mlops-2025"
version = "0.1.0"
description = "homework1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "fastapi>=0.119.0",
    "httpx>=0.27.0",
    "joblib>=1.5.2",
    "sentence-transformers>=3.3.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
